Revert "correçoes do site"
This reverts commit 078c919f215854d21831ceb0e675053a29d32197.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,5 @@ extra_css:
 
 nav:
   - Home: README.md
-  - Planejamento: planejamento.md
-  - Pré-rastreabilidade: 
+  - Pré-ratreabilidade: 
     - RichPicture: richPicture.md
-    
