Ajustado documento de planejamento.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,7 @@ extra_css:
 
 nav:
   - Home: README.md
-  - Pré-ratreabilidade: 
+  - Planejamento: planejamento.md
+  - Pré-Rastreabilidade: 
     - RichPicture: richPicture.md
+  
