Ajustes para subir 5w2h.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,3 +11,5 @@ nav:
   - Planejamento: planejamento.md
   - Pré-Rastreabilidade: 
     - RichPicture: richPicture.md
+  - Elicitação de requisitos :
+    - 5W2H: 5W2H.md
