--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,3 +14,4 @@ nav:
   - Elicitação de requisitos :
     - 5W2H: 5W2H.md
     - Storytelling: Storytelling.md
+    - Introspecção: introspeccao.md
