--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,5 +15,6 @@ nav:
   - Elicitação de requisitos :
     - Entrevista: Entrevista.md
     - Introspecção: introspeccao.md
+    - Questionário: Questionario.md
     - Storytelling: Storytelling.md
     
