#23 criação de especificação suplementar
Co-authored-by: gleal17 <guilhermelml@gmail.com>
Co-authored-by: MoacirMSJ <moacirmascarenha86@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,4 +17,7 @@ nav:
     - Introspecção: introspeccao.md
     - Questionário: Questionario.md
     - Storytelling: Storytelling.md
+  - Modelagem:
+    - Especificação Suplementar: EspSuplementar.md
+  - Pesonas: Personas.md
     
