Criado Documento de caso de uso.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>
Co-authored-by: MoacirMSJ <moacirmascarenha86@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,4 +20,5 @@ nav:
   - Modelagem:
     - Especificação Suplementar: EspSuplementar.md
   - Pesonas: Personas.md
-    
+  - Modelagem :
+    - Caso de Uso : CasoDeUso.md
