--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Storytelling: Storytelling.md
   - Modelagem:
     - Especificação Suplementar: EspSuplementar.md
+    - Cenários: Cenarios.md
   - Pesonas: Personas.md
   - Modelagem :
     - Caso de Uso : CasoDeUso.md
