--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - Modelagem:
     - Especificação Suplementar: EspSuplementar.md
     - Cenários: Cenarios.md
+    - Léxico: Lexico.md
   - Pesonas: Personas.md
   - Modelagem :
     - Caso de Uso : CasoDeUso.md
