Pequena correção nas abas laterais da wiki

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
   - Modelagem:
     - Especificação Suplementar: EspSuplementar.md
     - Cenários: Cenarios.md
-    - Léxico: Lexico.md
+    - Léxico Ampliado da Linguagem: Lexico.md
     - Caso de Uso : CasoDeUso.md
   - Pesonas: Personas.md
   
