[#12] Criado documento Análise de Protocolo
Signed-off-by: MatheusEstanislau <matheus.estanislau7@gmail.com>
Co-authored-by: LucasAlexandre <lucas.alexandre.df@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
     - Introspecção: introspeccao.md
     - Questionário: Questionario.md
     - Storytelling: Storytelling.md
+    - Análise de Protocolo: analiseProtocolo.md
   - Modelagem:
     - Especificação Suplementar: EspSuplementar.md
     - Cenários: Cenarios.md
