Alterações nos topicos.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - Cenários: Cenarios.md
     - Léxico Ampliado da Linguagem: Lexico.md
     - Caso de Uso : CasoDeUso.md
-  - Pesonas: Personas.md
+    - Brainstorm : Brainstorm.md
+  - Personas: Personas.md
   
     
