--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,9 @@ nav:
     - Cenários: Cenarios.md
     - Léxico Ampliado da Linguagem: Lexico.md
     - Caso de Uso : CasoDeUso.md
+  - Ágil:
+    - História de Usuários: UserHist.md
+
   - Personas: Personas.md
   
     
