Adicionado desempnho e usabilidade
Signed-off-by: Lucas Alexandre <lucas.alexandre.df@gmail.com>
Co-authored-by: Matheu de Cristo Doreia Estanislau <matheus.estanislau7@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - Cenários: Cenarios.md
     - Léxico Ampliado da Linguagem: Lexico.md
     - Caso de Uso : CasoDeUso.md
+    - NFR framework: NFR.md
   - Personas: Personas.md
   
     
