Refatorado verificacao dos Casos de Uso
Signed-off-by: Lucas Alexandre <lucas.alexandre.df@gmail.com>
Co-authored-by: Matheu de Cristo Doreia Estanislau <matheus.estanislau7@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,5 +30,7 @@ nav:
     - História de Usuários: UserStories.md
     - NFR framework: NFR.md
   - Personas: Personas.md
+  - Análise: 
+    - Verificação Casos de uso: avCasoDeUso.md
   
     
