#40 modificando local do arquivo e add mkdocs.yml
Signed-off-by: gleal17 <guilhermelml@gmail.com>
Co-authored-by: jpcirqueira <jpcirqueira81@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,6 @@ nav:
   - Análise: 
     - Verificação Casos de Uso: VerificacaoCasoDeUso.md
     - Verificação Rich Picture: Verificacao-RichPicture.md
-
+    - Verificação Cenário: VerificacaoCenarios.md
 
   
