Atualizados NFR Geral e Usabiliade.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,5 +34,6 @@ nav:
     - Verificação Casos de Uso: VerificacaoCasoDeUso.md
     - Verificação Rich Picture: Verificacao-RichPicture.md
     - Verificação Cenário: VerificacaoCenarios.md
+    - Verificação Léxico: verificacaolexico.md
 
   
