--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ nav:
     - Verificação NFR: Verificacao-NFR.md
     - Verificação Rich Picture: Verificacao-RichPicture.md
   - Pós-Rastreabilidade:
-    - Backward-from: Backward-from.md
-    - Foward From: fowardFrom.md
+    - Backward Form: Backward-form.md
+    - Forward Form: forwardForm.md
   
 
