Criado documento de prototipagem.
Signed-off-by: MoacirMSJ <moacirmascarenha86@gmail.com>
Co-authored-by: lucasA27 <lucas.alexandre.df@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,10 @@ nav:
     - Verificação NFR: Verificacao-NFR.md
     - Verificação Cenário: VerificacaoCenarios.md
     - Verificação Léxico: verificacaolexico.md
+  - Validação: 
+    - Entrevista: Entrevista-Prototipo.md
+    - Prototipagem: Validacao-Prototipo.md
+
   - Pós-Rastreabilidade:
     - Foward From: fowardFrom.md
     -  Backward-from: Backward-from.md
